# site

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-production.yaml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
compose/production/django/: Dockerfile  start
compose/production/nginx/: Dockerfile  example_nginx.conf
compose/production/postgres/: Dockerfile
compose/production/valkey/: Dockerfile  valkey.conf
django_project/: settings.py  urls.py
locale/fa/LC_MESSAGES/: django.mo  django.po
pages/: apps.py  urls.py  views.py
posts/: admin.py  api_urls.py  apps.py  feeds.py  forms.py  models.py  serializers.py  sitemaps.py  urls.py  utils.py  views.py
posts/migrations/: 0001_initial.py  0001_squashed_0003_alter_post_body.py  0002_post_alt_post_image.py
static/css/: built.css  postcss.config.js  style.css  tailwind.css
static/fonts/: inter-v3-latin-300.eot  inter-v3-latin-500.eot  inter-v3-latin-700.eot
static/img/: black-tea.avif
static/js/: search.js
templates/: 404.html  _base.html
templates/includes/: blog_card.html
templates/pages/: about.html  home.html  robots.txt
templates/posts/: post_detail.html  post_list.html
tests/test_posts/: test_models.py  test_views.py
