[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1.0",
    "django-classy-settings>=3.0.7",
    "django-environ>=0.11.2",
    "django-tailwind>=3.8.0",
    "django-valkey[brotli,libvalkey,msgpack]>=0.1.8",
    "django>=5.1.2",
    "djangorestframework>=3.15.2",
    "pillow>=11.0.0",
    "psycopg[c,pool]>=3.2.3",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "django-coverage-plugin>=3.1.0",
    "django-debug-toolbar>=4.4.6",
    "django-stubs>=5.1.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "ruff>=0.7.2",
    "whitenoise>=6.8.2",
    "pytest-asyncio>=0.24.0",
]

[tool.django-stubs]
django_settings_module="django_project.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_project.settings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
plugins = ["django_coverage_plugin"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
"**/{migrations}/*" = ["F401"]

